Fix z-index order issue with leaflet map

--- a/frontend/src/app/+form/form-info/form-info.component.scss
+++ b/frontend/src/app/+form/form-info/form-info.component.scss
@@ -10,7 +10,7 @@
     left: 0;
     right: 17px;
     top: 104px;
-    z-index: 1000;
+    z-index: 2000;
 
     ::ng-deep .anchor-navigation {
       margin-left: 0;
